# CainBot

./: .gitignore  AGENTS.md  CHAT_INTERFACE_INSTABILITY_REPORT_2026-03-27.md  Cargo.toml  README.md  RUST_PORT_PROGRESS.md  compose.json  config.example.json  package.json  recovered-index-clean.txt  recovered-index-merged.txt  recovered-index-snippets.txt  run-cain-bot.bat  run-cain-service.bat
data/: runtime-config.json  webui-sync.json
data/daily-reports/: mock-report.json  (+13 more)
prompts/: chat-system-prompt.txt  qa-filter-prompt.txt  qa-prompt-review.txt  qa-topic-closure.txt  translation-system-prompt.txt
rust-src/: app.rs  chat_session_manager.rs  codex_bridge_server.rs  commands.rs  config.rs  event_utils.rs  group_file_download_worker.rs  issue_repair_manager.rs  logger.rs  main.rs  message_attachment_reader.rs  message_input.rs  napcat_client.rs  openai_chat_client.rs  openai_translator.rs  qa_session_worker.rs  runtime_config_store.rs  state_store.rs  utils.rs  webui_sync_store.rs  worker_process.rs
scripts/: CainMsavMetadata.java  enable-napcat-http-sse.ps1  generate-mindustry-content-must-read.mjs  rust-group-download-worker.mjs  rust-qa-session-worker.mjs
src/: chat-session-manager.mjs  codex-bridge-server.mjs  codex-readonly-tools.mjs  config.mjs  group-file-download-manager.mjs  index.mjs  local-rag-retriever.mjs  logger.mjs  message-attachment-reader.mjs  mod-issue-repair-manager.mjs  msav-map-analyzer.mjs  napcat-client.mjs  openai-chat-client.mjs  openai-translator.mjs  runtime-config-store.mjs  state-store.mjs  utils.mjs  webui-sync-store.mjs
(+6 files in other folders)
