[package]
name = "napcat-cain-bot-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cainbot-rs"
path = "rust-src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["charset", "gzip", "http2", "json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tiny_http = "0.12"
tokio = { version = "1.45", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
url = "2.5"
base64 = "0.22"
